# Bruce

./: .dockerignore  .env.example  .gitignore  BRUCE_AI.md  BruceTerminalApp.tsx  CognitiveConsole.tsx  Dockerfile  Dockerfile.frontend  EpisodeHistoryPanel.tsx  Makefile  README.md  __init__.py  adaptive_learning.py  agent_trader.py  alembic.ini  api_extensions.py  api_routes.py  auth.py  bias_filter.py  bruce_agent.py  bruce_autonomy.py  bruce_cli.py  bruce_daemon.py  bruce_identity.py  bruce_init_library.sh  bruce_init_library_godmode.sh  bruce_mcp_server.py  bruce_strategic_core.py  brucetest.ps1  code_genius.py  cognitive_index.py  crisis_simulator.py  crypto_maker.py  data_sources.yaml  deepseek_controller.py  deepseek_editor.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  emotion_engine.py  (+50 more)
ai_core/: __init__.py  bruce_evolver.py  deepseek_kernel.py  emotion_engine.py  eurosymbolic_integration.py  feedback_collector.py  infer_router.py  kernel_selector.py  personality_engine.py  phi3_kernel.py  quantum_inspired_optimization.py  reconnect_engine.py  self_auditor.py  thinking_router.py
app/: __init__.py  database.py  main.py
bruce_api/: emotion.py  inference.py  main.py  memory.py  rlhf.py  tia.py  utils.py
cognitive_memory/: episodic_memory_handler.py
components/: AIHealthMonitor.tsx  App.tsx  ArbitragePanel.tsx  ArchetypeSelector.tsx  AvatarModeSelector.tsx  AvatarSelector.tsx  BiometricHUD.tsx  BruceAvatar.tsx  BruceTerminal.tsx  CodeRefactorPanel.tsx  CryptoTransactionViewer.tsx  DataLoaderComponent.tsx  DocumentReaderPanel.tsx  (+30 more)
(+589 files in other folders)
